--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -681,17 +681,29 @@ div[class*='suit']:after {
 
 
 
-@media screen and (max-width: 600px) {
- 	#footer {
- 		position: absolute;
- 		bottom: -120vh;
- 	}
-}
+// @media only screen and (max-width: 600px){
+// 	div[id="footer"] {
+//  		position: absolute;
+//  		bottom: -120vh;
+//  		width: 100%;
+// 		padding: 2em;
+// 		margin: 15px 0 0 0;
+		
+// 		display: inline-block;
+// 		left: 0;
+		
+// 		box-shadow: 1px -2px 1px black;
+// 		background-color: rgba(0, 0, 0, .9);
+// 		color: white;
+// 		text-align: center;
+// 		z-index: 30;
+//  	}
+// }
 
 
 #footer {
 	width: 100%;
-	padding: 2em;
+	padding: 1.2em;
 	margin: 15px 0 0 0;
 	position: fixed;
 	display: inline-block;
