--- a/src/css/main.css
+++ b/src/css/main.css
@@ -76,15 +76,7 @@ body {
   transform: translate(0, 0);
   -webkit-transform: translate(0, 0); }
 
-/* line 136, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
-.react-logo {
-  animation: react-logo-spin infinite 15s linear;
-  height: 50px;
-  margin: auto;
-  position: relative;
-  opacity: .8; }
-
-/* line 144, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 137, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .touch {
   height: 37px;
   margin: auto;
@@ -92,14 +84,14 @@ body {
   position: relative;
   opacity: .8; }
 
-/* line 152, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 145, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .card-container {
   display: flex;
   -webkit-display: flex;
   flex-wrap: wrap;
   -webkit-flex-wrap: wrap; }
 
-/* line 159, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 152, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .card {
   margin-bottom: 10px;
   position: relative;
@@ -111,7 +103,7 @@ body {
   background: #fff;
   -webkit-box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3);
   box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3); }
-  /* line 171, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 164, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card .front, .card .back {
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
@@ -124,7 +116,7 @@ body {
     -webkit-display: flex;
     align-content: space-around;
     justify-content: center; }
-  /* line 182, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 175, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card .front {
     transform: rotatey(-180deg);
     -webkit-transform: rotatey(-180deg);
@@ -139,18 +131,18 @@ body {
     width: 100%;
     animation-name: cardenter;
     animation-fill-mode: forwards; }
-  /* line 194, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 187, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card .back {
     z-index: 3;
     width: 100%;
     height: 100%;
     background-image: url("../images/card-back.png");
     background-size: 100% 100%; }
-    /* line 200, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    /* line 193, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
     .card .back:hover {
       cursor: pointer; }
 
-/* line 206, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 199, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .flipit {
   transform: rotatey(-180deg);
   -webkit-transform: rotatey(-180deg);
@@ -165,14 +157,14 @@ body {
   animation: cardenter .5s;
   -webkit-animation: cardenter .5s; }
 
-/* line 213, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 206, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .front > p {
   padding: auto;
   margin: auto;
   font: 80px/160px Georgia, Times New Roman, serif;
   position: absolute; }
 
-/* line 232, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 225, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .page-header {
   margin: 0;
   margin-bottom: 10px;
@@ -181,12 +173,12 @@ body {
   padding-top: 10px;
   height: 5em;
   box-shadow: 1px 1px 2px black; }
-  /* line 241, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 234, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .page-header h1 {
     margin: 0;
     padding: 0; }
 
-/* line 247, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 240, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 #button-group {
   min-width: 130px;
   position: fixed;
@@ -195,12 +187,12 @@ body {
   left: auto;
   z-index: 30; }
 
-/* line 256, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 249, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .score-text {
   text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.4);
   color: #e60a0a; }
 
-/* line 261, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 254, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 #custom-button {
   border-radius: 3px;
   border: 1px solid transparent;
@@ -209,10 +201,10 @@ body {
   padding-bottom: 10px;
   font-size: 1.1em;
   width: 100px; }
-  /* line 269, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 262, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   #custom-button:disabled {
     opacity: .4; }
-  /* line 272, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 265, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   #custom-button:hover {
     transition: 0.2s;
     -webkit-transition: 0.2s;
@@ -221,7 +213,7 @@ body {
     border: 1px solid rgba(255, 255, 255, 0.7); }
 
 /* SIDE NAV */
-/* line 280, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 273, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .sidenav-button-a {
   background: rgba(214, 32, 38, 0.8);
   border-top-right-radius: 5px;
@@ -269,7 +261,7 @@ body {
   to {
     visibility: visible; } }
 
-/* line 342, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 335, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .nav-wrapper {
   text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.4);
   color: white;
@@ -280,7 +272,7 @@ body {
   transition: 2s ease-out;
   z-index: 500;
   text-align: center; }
-  /* line 353, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 346, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper .nav-menu {
     border: 1px solid rgba(0, 0, 0, 0.5);
     border-top-right-radius: 5px;
@@ -291,18 +283,18 @@ body {
     animation-duration: 1s;
     animation-fill-mode: forwards;
     text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.4); }
-    /* line 361, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    /* line 354, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
     .nav-wrapper .nav-menu .menu-items {
       text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.4);
       animation-name: showItems;
       animation-delay: .9s;
       animation-duration: .1s;
       animation-fill-mode: forwards; }
-      /* line 368, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+      /* line 361, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
       .nav-wrapper .nav-menu .menu-items ol {
         list-style-position: inside;
         padding: 5px; }
-  /* line 375, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 368, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper .nav-menu-closed {
     background: linear-gradient(to left, rgba(188, 3, 9, 0.7), rgba(214, 32, 38, 0.7), rgba(142, 9, 14, 0.7));
     animation-name: slideIn;
@@ -312,18 +304,18 @@ body {
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     box-shadow: 1px 2px 2px; }
-  /* line 383, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 376, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper .menu-items {
     visibility: hidden; }
 
 /* CARD IMAGES */
-/* line 390, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 383, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .card-wrapper {
   width: 213px;
   height: 268px;
   display: inline-block; }
 
-/* line 397, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 390, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread > .card {
   position: absolute;
   top: 0;
@@ -335,14 +327,14 @@ body {
   transition: top 0.3s ease, left 0.3s ease;
   transition: .5s ease; }
 
-/* line 409, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 402, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread {
   margin-top: 20px;
   width: 250px;
   height: 250px;
   position: relative; }
 
-/* line 416, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 409, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread > .card {
   position: absolute;
   top: 0;
@@ -353,7 +345,7 @@ body {
   -ms-transition: top 0.3s ease, left 0.3s ease;
   transition: .5s ease; }
 
-/* line 429, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 422, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(1) {
   right: 100px;
   top: 10px;
@@ -364,7 +356,7 @@ body {
   transform: rotate(-30deg);
   transition: .5s; }
 
-/* line 443, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 436, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(2) {
   left: 50px;
   -webkit-transform: rotate(10deg);
@@ -374,7 +366,7 @@ body {
   transform: rotate(10deg);
   transition: .5s; }
 
-/* line 454, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 447, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(2):last-child {
   left: 100px;
   -webkit-transform: rotate(30deg);
@@ -384,7 +376,7 @@ body {
   transform: rotate(30deg);
   transition: .5s; }
 
-/* line 464, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 457, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(3) {
   left: 200px;
   top: 10px;
@@ -395,7 +387,7 @@ body {
   transform: rotate(30deg);
   transition: .5s; }
 
-/* line 475, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 468, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(4) {
   left: 80px;
   top: 20px;
@@ -406,7 +398,7 @@ body {
   transform: rotate(50deg);
   transition: .5s; }
 
-/* line 486, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 479, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(5) {
   left: 100px;
   top: 30px;
@@ -417,47 +409,47 @@ body {
   transform: rotate(70deg);
   transition: .5s; }
 
-/* line 531, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 524, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread > .card .fanned {
   -webkit-box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.4);
   box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.4); }
 
-/* line 536, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 529, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 body {
   background: #00a651; }
 
-/* line 560, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 553, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suitdiamonds:before, .suitdiamonds:after {
   content: "♦";
   color: #ff0000;
   position: absolute; }
 
-/* line 566, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 559, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suithearts:before, .suithearts:after {
   content: "♥";
   color: #ff0000;
   position: absolute; }
 
-/* line 572, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 565, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suitclubs:before, .suitclubs:after {
   content: "♣";
   color: #000;
   position: absolute; }
 
-/* line 578, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 571, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suitspades:before, .suitspades:after {
   content: "♠";
   color: #000;
   position: absolute; }
 
-/* line 584, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 577, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 div[class*='suit']:before {
   position: absolute;
   font-size: 35px;
   left: 5px;
   top: 5px; }
 
-/* line 591, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 584, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 div[class*='suit']:after {
   position: absolute;
   font-size: 35px;
@@ -480,17 +472,17 @@ div[class*='suit']:after {
   100% {
     color: black; } }
 
-/* line 623, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 616, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .winner {
   animation: winner .2s;
   animation-iteration-count: 5; }
 
-/* line 628, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 621, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .loser {
   animation: loser 2s; }
 
 /* NAVBAR */
-/* line 636, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 629, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .nav-wrapper-top {
   opacity: .8;
   width: 100%;
@@ -504,11 +496,11 @@ div[class*='suit']:after {
   box-shadow: 0px 1px 1px black;
   text-align: center;
   display: block; }
-  /* line 651, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 644, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper-top .icon {
     float: right;
     display: none; }
-  /* line 658, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 651, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper-top button {
     float: left;
     display: block;
@@ -520,19 +512,19 @@ div[class*='suit']:after {
     color: white;
     background: none;
     border: none; }
-    /* line 670, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    /* line 663, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
     .nav-wrapper-top button:disabled {
       color: gray; }
-    /* line 674, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    /* line 667, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
     .nav-wrapper-top button:hover {
-      -webkit-mask-image: -webkit-linear-gradient(top, black, rgba(0, 0, 0, 0.5) 50%, black);
-      -webkit-mask-image: linear-gradient(top, black, rgba(0, 0, 0, 0.5) 50%, black);
+      -webkit-mask-image: -webkit-linear-gradient(to top, black, rgba(0, 0, 0, 0.5) 50%, black);
+      -webkit-mask-image: linear-gradient(to top, black, rgba(0, 0, 0, 0.5) 50%, black);
       transition: 0.2s;
       -webkit-transition: 0.2s;
       -moz-transition: 0.2s;
       -o-transition: 0.2s; }
 
-/* line 704, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 697, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 #footer {
   width: 100%;
   padding: 1.2em;
@@ -547,7 +539,7 @@ div[class*='suit']:after {
   text-align: center;
   z-index: 30; }
 
-/* line 719, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 712, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 #dropdown-btn {
   color: black;
   opacity: .7;
@@ -555,6 +547,6 @@ div[class*='suit']:after {
   top: 0;
   padding: 10; }
 
-/* line 731, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 724, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 body {
   padding-bottom: 100px; }
