--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -174,8 +174,8 @@ body {
 
 	.front {
 		@include transform(rotatey(-180deg));
-		-webkit-animation: cardenter 0.1s forwards;
-		animation: cardenter false forwards;
+		// -webkit-animation: cardenter 0.1s forwards;
+		animation: cardenter 0.01s forwards;
 		z-index: 1;
 		height: 100%;
 		position: absolute;
