--- a/card-game/src/css/main.scss
+++ b/card-game/src/css/main.scss
@@ -95,7 +95,7 @@ $text-shadow: -1px 1px 1px rgba(0, 0, 0, .4);
 
 @media screen and (max-width: 600px) {
   .nav-wrapper-top > :nth-child(-n+4) {display: none;}
-  .nav-wrapper-top button.icon {
+  .nav-wrapper-top NavLink.icon {
     float: right;
     display: block;
   }
@@ -103,13 +103,13 @@ $text-shadow: -1px 1px 1px rgba(0, 0, 0, .4);
 
 @media screen and (max-width: 600px) {
   .nav-wrapper-top.responsive {position: relative;}
-  .nav-wrapper-top.responsive button.icon {
+  .nav-wrapper-top.responsive a.icon {
 
     position: absolute;
     right: 16px;
     top: 14px;
   }
-  .nav-wrapper-top.responsive button {
+  .nav-wrapper-top.responsive a {
     float: none;
     display: block;
     text-align: left;
@@ -651,7 +651,7 @@ div[class*='suit']:after {
 		
 	}
 
-	button {
+	a {
 		float: left;
 		display: block;
 		padding: 6px 6px;
